--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/sanitize-html": "^2.9.0",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.1",
+    "@types/dom-parser": "^0.1.1",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
@@ -90,6 +91,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-typescript-sort-keys": "^2.3.0",
     "fake-indexeddb": "^4.0.1",
+    "dom-parser": "^0.1.6",
     "husky": "^8.0.3",
     "hygen": "^6.2.11",
     "jest": "^29.5.0",
